@@ -154,6 +154,15 @@ The current configuration can be printed by running =clpm config info=.
   This table contains configuration for groveling for dependencies and other
   information from .asd files.
 
+** =(:grovel :lisp)=
+   This table contains the configuration on which Lisp implementation to use
+   when groveling.
+
+   + =:implementation= :: A keyword naming an implementation recognized by the
+     lisp-invocation library.
+   + =:path= :: The command to execute when starting the Lisp
+     implementation. Needed only if using a non standard path.
+
 ** =(:grovel :sandbox)=
    This table contains configuration of the sandbox used to isolate processes
    that grovel for dependencies from .asd files. (Experimental)
