@@ -9,6 +9,8 @@
   + Pull CLPI documentation and implementation into separate project.
   + Pull QL integration for CLPI into separate project.
   + Build binaries with SBCL 2.0.4.
+  + Add =(:grovel :lisp :implementation)= and =(:grovel :lisp :path)= for
+    controlling what Lisp implementation is used by the groveler.
 
 * v0.2.1 - 2020-04-05
 
